--- a/project.properties
+++ b/project.properties
@@ -13,11 +13,7 @@
 # Project target.
 target=android-17
 android.library=false
-android.library.reference.1=libs\\lib_PagerSlidingTabStrip
-android.library.reference.2=libs\\lib_cards
-android.library.reference.3=libs\\lib_cards_extra
-android.library.reference.4=libs\\google-play-services_lib
-android.library.reference.5=..\\..\\..\\..\\..\\adt-bundle-windows-x86_64-20131030\\sdk\\extras\\google\\google_play_services\\libproject\\google-play-services_lib
-android.library.reference.6=../RemindmeV2/lib_cards
-android.library.reference.8=../RemindmeV2/lib_PagerSlidingTabStrip
-android.library.reference.7=../RemindmeV2/lib_cards_extra
+android.library.reference.1=../../../../[workspace]/remindme/libs/lib_PagerSlidingTabStrip
+android.library.reference.2=../../../../[workspace]/remindme/libs/google-play-services_lib
+android.library.reference.3=../../../../[workspace]/remindme/libs/lib_cards
+android.library.reference.4=../../../../[workspace]/remindme/libs/lib_cards_extra
