--- a/project.properties
+++ b/project.properties
@@ -13,7 +13,10 @@
 # Project target.
 target=android-17
 android.library=false
-android.library.reference.1=../Remindme_libs/google-play-services_lib
-android.library.reference.2=../Remindme_libs/lib_cards
-android.library.reference.3=../Remindme_libs/lib_cards_extra
-android.library.reference.4=../Remindme_libs/lib_PagerSlidingTabStrip
+android.library.reference.1=..\\Remindme_libs\\google-play-services_lib
+android.library.reference.2=..\\Remindme_libs\\lib_cards
+android.library.reference.3=..\\Remindme_libs\\lib_cards_extra
+android.library.reference.4=..\\Remindme_libs\\lib_PagerSlidingTabStrip
+android.library.reference.6=../RemindmeV3libs/lib_cards
+android.library.reference.5=../../../../../adt-bundle-windows-x86_64-20131030/sdk/extras/google/google_play_services/libproject/google-play-services_lib
+android.library.reference.7=../RemindmeV3libs/lib_PagerSlidingTabStrip
