更新class/package名稱 更新service執行方式/獨立gps抓距離(locationProvider) 更新preferance.xml與啟動時讀取相關設定

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -44,7 +44,7 @@
             </intent-filter>
         </activity>
 
-        <provider android:name=".provider.TaskDBProvider" android:authorities="me.iamcxa.remindme" android:exported="false">
+        <provider android:name="me.iamcxa.remindme.database.TaskDbProvider" android:authorities="me.iamcxa.remindme" android:exported="false">
         </provider>
 
         <activity android:name="RemindmePreference" android:screenOrientation="portrait">
