--- a/project.properties
+++ b/project.properties
@@ -20,3 +20,6 @@ android.library.reference.4=..\\Remindme_libs\\lib_PagerSlidingTabStrip
 android.library.reference.6=../RemindmeV3libs/lib_cards
 android.library.reference.5=../../../../../adt-bundle-windows-x86_64-20131030/sdk/extras/google/google_play_services/libproject/google-play-services_lib
 android.library.reference.7=../RemindmeV3libs/lib_PagerSlidingTabStrip
+android.library.reference.8=../../../../Applications/adt-bundle-mac-x86_64-20140321/sdk/extras/google/google_play_services/libproject/google-play-services_lib
+android.library.reference.10=../libs/lib_PagerSlidingTabStrip
+android.library.reference.9=../libs/lib_cards
