--- a/project.properties
+++ b/project.properties
@@ -16,9 +16,4 @@ android.library=false
 android.library.reference.1=..\\Remindme_libs\\google-play-services_lib
 android.library.reference.2=..\\Remindme_libs\\lib_cards
 android.library.reference.3=..\\Remindme_libs\\lib_cards_extra
-android.library.reference.4=..\\..\\..\\..\\..\\adt-bundle-windows-x86_64-20131030\\sdk\\extras\\google\\google_play_services\\libproject\\google-play-services_lib
-android.library.reference.6=..\\RemindmeV3libs\\lib_PagerSlidingTabStrip
-android.library.reference.5=..\\RemindmeV3libs\\lib_cards
-android.library.reference.7=..\\..\\..\\..\\Applications\\adt-bundle-mac-x86_64-20140321\\sdk\\extras\\google\\google_play_services\\libproject\\google-play-services_lib
-android.library.reference.8=..\\libs\\lib_cards
-android.library.reference.9=..\\libs\\lib_PagerSlidingTabStrip
+android.library.reference.4=../Remindme_libs/StickyListHeaders-master/StickyListHeaders
