--- a/project.properties
+++ b/project.properties
@@ -16,4 +16,7 @@ android.library=false
 android.library.reference.1=..\\Remindme_libs\\google-play-services_lib
 android.library.reference.2=..\\Remindme_libs\\lib_cards
 android.library.reference.3=..\\Remindme_libs\\lib_cards_extra
-android.library.reference.4=../Remindme_libs/StickyListHeaders-master/StickyListHeaders
+android.library.reference.4=..\\Remindme_libs\\StickyListHeaders-master\\StickyListHeaders
+android.library.reference.6=../../../../[workspace]/remindme/libs/lib_cards
+android.library.reference.5=../../../../[workspace]/remindme/libs/google-play-services_lib
+android.library.reference.7=../../../../[workspace]/remindme/libs/lib_cards_extra
