Service新增上次距離

--- a/project.properties
+++ b/project.properties
@@ -17,3 +17,5 @@ android.library.reference.1=..\\..\\..\\..\\[workspace]\\remindme\\libs\\google-
 android.library.reference.2=..\\..\\..\\..\\[workspace]\\remindme\\libs\\lib_cards
 android.library.reference.3=..\\..\\..\\..\\[workspace]\\remindme\\libs\\lib_cards_extra
 android.library.reference.4=../../../../[workspace]/remindme/libs/StickyListHeaders
+android.library.reference.6=../../../../Applications/adt-bundle-mac-x86_64-20140321/sdk/extras/google/google_play_services/libproject/google-play-services_lib
+android.library.reference.5=../libs/lib_cards
