--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -52,7 +52,9 @@
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyB_so61XR17TQz3hs1Err7qWyd39pm8Jsc" />
+            android:value="AIzaSyCc6qLg_oLGlva4ms9IwnpCOnpp2laUNNw" />
+        	<!-- AIzaSyCc6qLg_oLGlva4ms9IwnpCOnpp2laUNNw 耀德 mac mini key -->
+        	
      	 <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
      	 
         <receiver android:name="RemindmeReciver" android:exported="false">
