--- a/project.properties
+++ b/project.properties
@@ -13,7 +13,7 @@
 # Project target.
 target=android-17
 android.library=false
-android.library.reference.1=..\\..\\..\\..\\[workspace]\\remindme\\libs\\google-play-services_lib
-android.library.reference.2=..\\..\\..\\..\\[workspace]\\remindme\\libs\\lib_cards
-android.library.reference.3=..\\..\\..\\..\\[workspace]\\remindme\\libs\\lib_cards_extra
-android.library.reference.4=../../../../[workspace]/remindme/libs/StickyListHeaders
+android.library.reference.1=../remindme/libs/google-play-services_lib
+android.library.reference.2=../remindme/libs/lib_cards
+android.library.reference.3=../remindme/libs/lib_cards_extra
+android.library.reference.4=../remindme/libs/StickyListHeaders
