--- a/project.properties
+++ b/project.properties
@@ -13,8 +13,11 @@
 # Project target.
 target=android-17
 android.library=false
-android.library.reference.1=../../../../[workspace]/remindme/libs/google-play-services_lib
-android.library.reference.2=../../../../[workspace]/remindme/libs/lib_cards
-android.library.reference.3=../../../../[workspace]/remindme/libs/lib_cards_extra
-android.library.reference.4=../../../../[workspace]/remindme/libs/StickyListHeaders
+android.library.reference.1=..\\..\\..\\..\\[workspace]\\remindme\\libs\\google-play-services_lib
+android.library.reference.2=..\\..\\..\\..\\[workspace]\\remindme\\libs\\lib_cards
+android.library.reference.3=..\\..\\..\\..\\[workspace]\\remindme\\libs\\lib_cards_extra
+android.library.reference.4=..\\..\\..\\..\\[workspace]\\remindme\\libs\\StickyListHeaders
 
+android.library.reference.6=../StickyListHeaders/library
+android.library.reference.5=../../../../../adt-bundle-windows-x86_64-20131030/sdk/extras/google/google_play_services/libproject/google-play-services_lib
+android.library.reference.7=../cardslib/library/src/main
