--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,7 +30,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_CALENDAR" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/><application android:allowBackup="true" android:allowClearUserData="true" android:enabled="true" android:hardwareAccelerated="true" android:icon="@drawable/remindme_logo" android:label="@string/app_name" android:largeHeap="true" android:theme="@style/Theme.Irdark" android:uiOptions="none" android:logo="@drawable/remindme_logo">
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/><application android:allowBackup="true" android:allowClearUserData="true" android:enabled="true" android:hardwareAccelerated="true" android:icon="@drawable/remindme_logo" android:largeHeap="true" android:uiOptions="none" android:logo="@drawable/remindme_logo" android:theme="@android:style/Theme.Holo.Light">
         <activity android:name="RemindmeMainActivity" android:label="@string/app_name" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
