--- a/project.properties
+++ b/project.properties
@@ -18,3 +18,7 @@ android.library.reference.2=..\\..\\..\\..\\[workspace]\\remindme\\libs\\lib_car
 android.library.reference.3=..\\..\\..\\..\\[workspace]\\remindme\\libs\\StickyListHeaders
 android.library.reference.4=..\\..\\..\\..\\[workspace]\\remindme\\libs\\google-play-services_lib
 
+android.library.reference.6=../../RemindmeV3libs/lib_cards_extra
+android.library.reference.5=../../RemindmeV3libs/lib_cards
+android.library.reference.8=../../../../../../adt-bundle-windows-x86_64-20131030/sdk/extras/google/google_play_services/libproject/google-play-services_lib
+android.library.reference.7=../../StickyListHeaders/library
