重寫資料庫/加入切換view過場動畫lib

--- a/project.properties
+++ b/project.properties
@@ -18,3 +18,4 @@ android.library.reference.2=..\\..\\..\\..\\[workspace]\\remindme\\libs\\lib_car
 android.library.reference.3=..\\..\\..\\..\\[workspace]\\remindme\\libs\\StickyListHeaders
 android.library.reference.4=..\\..\\..\\..\\[workspace]\\remindme\\libs\\google-play-services_lib
 
+android.library.reference.5=../../../cxa/git/remindme/libs/Android-ProgressFragment-master/progressfragment-native
